1. 修正匯入檔案會有多個thread同時處理問題。 2. 修正博愛醫院住院醫令和病歷比對問題。 3. 修正XML申報檔cureItmeNo值為換行問題。 4. 修正DRG分配比例圖表錯誤。